[package]
name = "webgl_test"
version = "0.1.0"
authors = ["z"]

[dependencies]
bincode = ">=1.0.1"
lazy_static = ">=1.0.2"
nalgebra = ">=0.16.0"
ncollide3d = ">=0.17.1"
nphysics3d = ">=0.9.0"
pcg_rand = "^0.9.1"
rand = "^0.5.4"
serde = ">=1.0.70"
serde_derive = ">=1.0.70"
wasm-bindgen = ">=0.2.15"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
debug = true  # For wasm-bindgen
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
