[package]
name = "webgl_test_server"
version = "0.1.0"
authors = ["AugmentedFifth <zcomito@protonmail.com>"]

[dependencies]
actix-web = ">=0.7.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
