[package]
name = "webgl_test_server"
version = "0.1.0"
authors = ["AugmentedFifth <zcomito@protonmail.com>"]

[dependencies]
actix = "0.7.3"
actix-web = "0.7.3"
bincode = "1.0.1"
pcg_rand = "0.9.1"
rand = "0.5.5"
serde = "1.0.71"
serde_derive = "1.0.71"
webgl_test_common = { path = "../webgl_test_common" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
